finished the responsive styles and fixed some alignment issues with the h2 tags

--- a/css/custom.css
+++ b/css/custom.css
@@ -140,6 +140,10 @@ h1 {
   top: 0;
 }
 
+.recent-stories:nth-child(-n + 2) {
+  margin-top: 0px;
+}
+
 .newsletter-body {
   max-width: 360px;
 }
@@ -191,10 +195,6 @@ input.button {
 }
 
 @media (max-width: 960px) {
-  .newsletter-body {
-    max-width: 680px;
-  }
-
   .hero-menu img {
     max-width: 48px;
   }
@@ -206,5 +206,11 @@ input.button {
 
   .hero-menu {
     left: 1.5rem;
+  }
+}
+
+@media (max-width: 460px) {
+  .latest-story {
+    position: relative;
   }
 }
